room-details: Fix contrast of room name and description on room-details page
Have fixed the contrast of room name and description on room-details page by changing the opacity of the respective widgets.

Fixes: https://gitlab.gnome.org/GNOME/fractal/-/issues/1138

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -612,10 +612,15 @@ typing-bar avatar {
 
 .room-details-name:disabled {
   font-size: 2em;
+  filter: opacity(1);
 }
 
 .room-details-topic:not(:disabled) {
   min-height: 102px;
+}
+
+.room-details-topic:disabled {
+  filter: opacity(1);
 }
 
 .cutout-button {
